# Mk7Macro

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clicker.cpp  clicker.h  keybinds.cpp  keybinds.h  main.cpp  monitor.cpp  monitor.h  settings.cpp  settings.h
.github/workflows/: build.yml
